Now fetches info from the internet dynamically

--- a/Zach/Wind Turbines/api.ipynb
+++ b/Zach/Wind Turbines/api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2112,10 +2112,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "a\n",
+      "a\n",
+      "a\n",
+      "a\n",
+      "None\n",
+      "The mean temp for October 26, 1959 is 2.5C\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup as bs\n",
+    "\n",
+    "url = 'http://climate.weather.gc.ca/climate_data/daily_data_e.html?StationID=2636'\n",
+    "EMPTY = '\\xa0'\n",
+    "MISSING = '<a '\n",
+    "\n",
+    "content = requests.get(url).content\n",
+    "soup = bs(content, 'lxml')\n",
+    "table = soup.find('tbody')\n",
+    "days = table.find_all('tr')[1:]\n",
+    "\n",
+    "if days[0].find_all('td')[2].contents[0] == EMPTY or days[0].find_all('td')[2].contents[0] == MISSING:\n",
+    "    print(days[0].find_all('td')[2].contents[0])\n",
+    "    print(\"NO\")\n",
+    "\n",
+    "for i in range(len(days)-5, 0, -1):\n",
+    "    entries = days[i].find_all('td')\n",
+    "    print(entries[3].contents[0].name)\n",
+    "    # Need a better gaurd\n",
+    "    if entries[3].contents[0] != EMPTY and entries[3].contents[0].name is None:\n",
+    "        print(\"The mean temp for {} is {}C\".format(entries[0].contents[0].attrs['title'],\n",
+    "                                                   entries[3].contents[0]))\n",
+    "        break;\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
