--- a/Zach/Wind Turbines/map.ipynb
+++ b/Zach/Wind Turbines/map.ipynb
@@ -21,78 +21,101 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "# class KElementHeap():\n",
-    "#     def __init__(self, k):\n",
-    "#         self.k = k\n",
-    "#         self.heap = [None] * k\n",
-    "#         self.index = [None] * k\n",
-    "        \n",
-    "#     def add(self, n, index, pos):\n",
-    "#         last_elem = None\n",
-    "#         last_index = None\n",
-    "        \n",
-    "#         for i in range(len(self.heap)):\n",
-    "#             last_elem = self.heap[i]\n",
-    "#             last_index = self.index[i]\n",
-    "#             self.heap[i] = n\n",
-    "#             self.index[i] = index\n",
-    "#             n = last_elem\n",
-    "#             index = last_index\n",
-    "                \n",
-    "#     def push(self, n, index):\n",
-    "#         for i in range(len(self.heap)):\n",
-    "#             if self.heap[i] is None or n < self.heap[i]:\n",
-    "#                 self.add(n, index, i)\n",
-    "#                 break\n",
-    "                \n",
-    "#     def get_best(self):\n",
-    "#         return self.index\n",
-    "\n",
-    "\n",
-    "# # This is a slow implementation, if to slow make a quad-tree\n",
-    "# #     pos is (lat, lon)\n",
-    "# #     k is the how many to find\n",
-    "# def station_find(pos, k=1):\n",
-    "#     global Stations\n",
-    "#     top = KElementHeap(k)\n",
-    "    \n",
-    "#     for i, station in enumerate(Stations):\n",
-    "#         lat = float(get_station_attr(station, 'lat'))\n",
-    "#         lon = float(get_station_attr(station, 'lon'))\n",
-    "#         dist = (pos[0]-lat)**2 + (pos[1] - lon)**2\n",
-    "#         top.push(dist, i)\n",
-    "     \n",
-    "#     best = top.get_best()\n",
-    "#     for index in best:\n",
-    "#         if Popups[index].value == '--':\n",
-    "#             name = get_station_attr(Stations[index], 'name')\n",
-    "#             Popups[index].value = name\n",
-    "    \n",
-    "        \n",
-    "# def dec_to_deg(num):\n",
-    "#     decimal = num - int(num)\n",
-    "#     minutes = decimal * 60\n",
-    "#     leftover = minutes - int(minutes)\n",
-    "#     seconds = leftover * 60\n",
-    "    \n",
-    "#     return (int(num), int(minutes), seconds)"
+    "This is a quick demo of my progress on this sprint<br>\n",
+    "In this demo each weather station attempts to grab the last<br>\n",
+    "daily mean tempurature that was released by that station from the internet.<br><br>\n",
+    "However there is not much error handling so some stations data<br>\n",
+    "may look odd, or be empty"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: requests in /opt/conda/lib/python3.6/site-packages\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /opt/conda/lib/python3.6/site-packages (from requests)\n",
+      "Requirement already satisfied: idna<2.7,>=2.5 in /opt/conda/lib/python3.6/site-packages (from requests)\n",
+      "Requirement already satisfied: urllib3<1.23,>=1.21.1 in /opt/conda/lib/python3.6/site-packages (from requests)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.6/site-packages (from requests)\n",
+      "Requirement already satisfied: beautifulsoup4 in /opt/conda/lib/python3.6/site-packages\n",
+      "Requirement already satisfied: tqdm in /home/zachary.selk/.local/lib/python3.6/site-packages\n",
+      "Requirement already satisfied: ipyleaflet in /home/zachary.selk/.local/lib/python3.6/site-packages\n",
+      "Requirement already satisfied: ipywidgets<8,>=7.0.0 in /opt/conda/lib/python3.6/site-packages (from ipyleaflet)\n",
+      "Requirement already satisfied: widgetsnbextension~=3.1.0 in /opt/conda/lib/python3.6/site-packages (from ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: ipython>=4.0.0; python_version >= \"3.3\" in /opt/conda/lib/python3.6/site-packages (from ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: nbformat>=4.2.0 in /opt/conda/lib/python3.6/site-packages (from ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: traitlets>=4.3.1 in /opt/conda/lib/python3.6/site-packages (from ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: ipykernel>=4.5.1 in /opt/conda/lib/python3.6/site-packages (from ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: notebook>=4.4.1 in /opt/conda/lib/python3.6/site-packages (from widgetsnbextension~=3.1.0->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: jedi>=0.10 in /opt/conda/lib/python3.6/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: pygments in /opt/conda/lib/python3.6/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: pexpect; sys_platform != \"win32\" in /opt/conda/lib/python3.6/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: prompt-toolkit<2.0.0,>=1.0.15 in /opt/conda/lib/python3.6/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: decorator in /opt/conda/lib/python3.6/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: backcall in /opt/conda/lib/python3.6/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: simplegeneric>0.8 in /opt/conda/lib/python3.6/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: setuptools>=18.5 in /opt/conda/lib/python3.6/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: pickleshare in /opt/conda/lib/python3.6/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: jupyter-core in /opt/conda/lib/python3.6/site-packages (from nbformat>=4.2.0->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: ipython-genutils in /opt/conda/lib/python3.6/site-packages (from nbformat>=4.2.0->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: jsonschema!=2.5.0,>=2.4 in /opt/conda/lib/python3.6/site-packages (from nbformat>=4.2.0->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: six in /opt/conda/lib/python3.6/site-packages (from traitlets>=4.3.1->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: jupyter-client in /opt/conda/lib/python3.6/site-packages (from ipykernel>=4.5.1->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: tornado>=4.0 in /opt/conda/lib/python3.6/site-packages (from ipykernel>=4.5.1->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: nbconvert in /opt/conda/lib/python3.6/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.1.0->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: terminado>=0.8.1 in /opt/conda/lib/python3.6/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.1.0->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: Send2Trash in /opt/conda/lib/python3.6/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.1.0->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: jinja2 in /opt/conda/lib/python3.6/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.1.0->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: parso>=0.2.0 in /opt/conda/lib/python3.6/site-packages (from jedi>=0.10->ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /opt/conda/lib/python3.6/site-packages (from pexpect; sys_platform != \"win32\"->ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: wcwidth in /opt/conda/lib/python3.6/site-packages (from prompt-toolkit<2.0.0,>=1.0.15->ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /opt/conda/lib/python3.6/site-packages (from jupyter-client->ipykernel>=4.5.1->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: pyzmq>=13 in /opt/conda/lib/python3.6/site-packages (from jupyter-client->ipykernel>=4.5.1->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: mistune>=0.7.4 in /opt/conda/lib/python3.6/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.1.0->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: pandocfilters>=1.4.1 in /opt/conda/lib/python3.6/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.1.0->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: testpath in /opt/conda/lib/python3.6/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.1.0->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: entrypoints>=0.2.2 in /opt/conda/lib/python3.6/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.1.0->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: bleach in /opt/conda/lib/python3.6/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.1.0->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: MarkupSafe>=0.23 in /opt/conda/lib/python3.6/site-packages (from jinja2->notebook>=4.4.1->widgetsnbextension~=3.1.0->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Requirement already satisfied: html5lib!=0.9999,!=0.99999,<0.99999999,>=0.999 in /opt/conda/lib/python3.6/site-packages (from bleach->nbconvert->notebook>=4.4.1->widgetsnbextension~=3.1.0->ipywidgets<8,>=7.0.0->ipyleaflet)\n",
+      "Enabling notebook extension jupyter-leaflet/extension...\n",
+      "      - Validating: \u001b[32mOK\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dependencies\n",
+    "!pip install requests --user\n",
+    "!pip install beautifulsoup4 --user\n",
+    "!pip install tqdm --user\n",
+    "!pip install ipyleaflet --user\n",
+    "!jupyter nbextension enable --py --user ipyleaflet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1482/1482 [00:54<00:00, 27.11it/s]\n"
+      "100%|██████████| 1482/1482 [00:54<00:00, 26.96it/s]\n"
      ]
     }
    ],
@@ -129,6 +152,7 @@
     "    Popups[i] = HTML(value='--',\n",
     "                     placeholder='',\n",
     "                     description='')\n",
+    "\n",
     "    Markers[i].popup = Popups[i]\n",
     "    \n",
     "marker_cluster = MarkerCluster(markers=Markers)\n",
@@ -138,13 +162,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca92a75dafa646ef804e9dbfcb3dcbce",
+       "model_id": "5a25c2c15a5e4074a97268a2d979a794",
        "version_major": 2,
        "version_minor": 0
       },
