--- a/Vincent/LogProperties/LogProperties.ipynb
+++ b/Vincent/LogProperties/LogProperties.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"mathbook-content\"><h2 class=\"heading hide-type\" alt=\"Section 1 Properties of Logarithms\"><span class=\"type\">Section</span><span class=\"codenumber\">1</span><span class=\"title\">Properties of Logarithms</span></h2><a href=\"LogProperties.ipynb\" class=\"permalink\">¶</a></div>"
+    "<div class=\"mathbook-content\" id=\"foo\"><h2 class=\"heading hide-type\" alt=\"Section 1 Properties of Logarithms\"><span class=\"type\">Section</span><span class=\"codenumber\">1</span><span class=\"title\">Properties of Logarithms</span></h2><a href=\"LogProperties.ipynb\" class=\"permalink\">¶</a></div>"
    ]
   },
   {
@@ -87,14 +87,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"mathbook-content\"><p id=\"p-1\">In <a href=\"\" class=\"xref\" alt=\"\" title=\"\">Section </a>, we introduced the logarithmic functions as inverses of exponential functions and discussed a few of their functional properties from that perspective. In this section, we explore the algebraic properties of logarithms. Historically, these have played a huge role in the scientific development of our society since, among other things, they were used to develop analog computing devices called <a class=\"url\" href=\"http://en.wikipedia.org/wiki/Slide_rule\" target=\"_blank\"><em class=\"emphasis\">slide rules</em></a> which enabled scientists and engineers to perform accurate calculations leading to such things as space travel and the <a class=\"url\" href=\"http://www.redorbit.com/news/space/73297/nasa_marks_35th_anniversary_of_first_moon_landing/\" target=\"_blank\"><em class=\"emphasis\">moon landing</em></a>. As we shall see shortly, logs inherit analogs of all of the properties of exponents you learned in Elementary and Intermediate Algebra. We first extract two properties from <a href=\"\" class=\"xref\" alt=\"\" title=\"\">Theorem </a> to remind us of the definition of a logarithm as the inverse of an exponential function.</p></div>"
+    "<div class=\"mathbook-content\"><p id=\"p-1\">In <a href=\"#self\" class=\"xref\" alt=\"\" title=\"\" id=\"self\">Section </a>, we introduced the logarithmic functions as inverses of exponential functions and discussed a few of their functional properties from that perspective. In this section, we explore the algebraic properties of logarithms. Historically, these have played a huge role in the scientific development of our society since, among other things, they were used to develop analog computing devices called <a class=\"url\" href=\"http://en.wikipedia.org/wiki/Slide_rule\" target=\"_blank\"><em class=\"emphasis\">slide rules</em></a> which enabled scientists and engineers to perform accurate calculations leading to such things as space travel and the <a class=\"url\" href=\"http://www.redorbit.com/news/space/73297/nasa_marks_35th_anniversary_of_first_moon_landing/\" target=\"_blank\"><em class=\"emphasis\">moon landing</em></a>. As we shall see shortly, logs inherit analogs of all of the properties of exponents you learned in Elementary and Intermediate Algebra. We first extract two properties from <a href=\"\" class=\"xref\" alt=\"\" title=\"\">Theorem </a> to remind us of the definition of a logarithm as the inverse of an exponential function.</p></div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"mathbook-content\"><h4 class=\"heading hide-type\" alt=\"Section 1.1 Inverse Properties of Exponential and Logarithmic Functions\"><span class=\"type\">Section</span><span class=\"codenumber\">1.1</span><span class=\"title\">Inverse Properties of Exponential and Logarithmic Functions</span></h4><a href=\"LogProperties.ipynb#invpropslogs\" class=\"permalink\">¶</a></div>"
+    "<div class=\"mathbook-content\" name=\"foo\"><h4 class=\"heading hide-type\" alt=\"Section 1.1 Inverse Properties of Exponential and Logarithmic Functions\"><span class=\"type\">Section</span><span class=\"codenumber\">1.1</span><span class=\"title\">Inverse Properties of Exponential and Logarithmic Functions</span></h4><a href=\"LogProperties.ipynb#invpropslogs\" class=\"permalink\">¶</a></div>"
    ]
   },
   {
@@ -312,6 +312,14 @@
    "metadata": {},
    "source": [
     "<div class=\"mathbook-content\"><article class=\"example-like\" id=\"ex_basechange\"><h6 class=\"heading\"><span class=\"type\">Example</span><span class=\"codenumber\">1.1</span><span class=\"title\">Using change of base formulas</span></h6><p id=\"p-52\">Use an appropriate change of base formula to convert the following expressions to ones with the indicated base. Verify your answers using a computer or calculator, as appropriate. </p><ol class=\"decimal\"><li id=\"li-31\"><p id=\"p-53\">$3^{2}$ to base $10$</p></li><li id=\"li-32\"><p id=\"p-54\">$2^{x}$ to base $e$</p></li><li id=\"li-33\"><p id=\"p-55\">$\\log_{4}(5)$ to base $e$</p></li><li id=\"li-34\"><p id=\"p-56\">$\\ln(x)$ to base $10$</p></li></ol><ol id=\"p-57\" class=\"decimal\"><li id=\"li-35\"><p id=\"p-58\">We apply the Change of Base formula with $a=3$ and $b=10$ to obtain $3^2 = 10^{2 \\log(3)}\\text{.}$ Typing the latter in the calculator produces an answer of $9$ as required.</p></li><li id=\"li-36\"><p id=\"p-59\">Here, $a=2$ and $b = e$ so we have $2^{x} = e^{x \\ln(2)}\\text{.}$ To verify this on our calculator, we can graph $f(x) = 2^x$ (in red) and $g(x) = e^{x \\ln(2)}$ (in blue). Their graphs are indistinguishable which provides evidence that they are the same function: see <a href=\"LogProperties.ipynb#fig_logprop1\" class=\"xref\" alt=\"Figure 1.2 \" title=\"Figure 1.2 \">Figure 1.2</a>. <figure class=\"figure-like\" id=\"fig_logprop1\"><img width=\"100%\" src=\"ExpLogs03.png\" alt=\"\" /><figcaption><span class=\"type\">Figure</span><span class=\"codenumber\">1.2</span>$y=f(x)=2^x$ and $y=g(x)=e^{x\\ln(2)}$</figcaption></figure></p></li><li id=\"li-37\"><p id=\"p-60\">Applying the change of base with $a=4$ and $b=e$ leads us to write $\\log_{4}(5) = \\frac{\\ln(5)}{\\ln(4)}\\text{.}$ Evaluating this in the calculator gives $\\frac{\\ln(5)}{\\ln(4)} \\approx 1.16\\text{.}$ How do we check this really is the value of $\\log_{4}(5)\\text{?}$ By definition, $\\log_{4}(5)$ is the exponent we put on $4$ to get $5\\text{.}$ The plot from GeoGebra in <a href=\"LogProperties.ipynb#fig_logprop2\" class=\"xref\" alt=\"Figure 1.3 \" title=\"Figure 1.3 \">Figure 1.3</a> confirms this. (Which means if it is lying to us about the first answer it gave us, at least it is being consistent.)</p></li><li id=\"li-38\"><p id=\"p-61\">We write $\\ln(x) = \\log_{e}(x) = \\frac{\\log(x)}{\\log(e)}\\text{.}$ We graph both $f(x) = \\ln(x)$ and $g(x) = \\frac{\\log(x)}{\\log(e)}$ and find both graphs appear to be identical. <figure class=\"figure-like\" id=\"fig_logprop2\"><img width=\"100%\" src=\"ExpLogs04.png\" alt=\"\" /><figcaption><span class=\"type\">Figure</span><span class=\"codenumber\">1.3</span>$y=f(x)=2^x$ and $y=g(x)=e^{x\\ln(2)}$</figcaption></figure></p></li></ol></article></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<a href=\"#foo\">Foo</a>"
    ]
   },
   {
