--- a/Vincent/scripts/runAllExample_ClimateChange.ipynb
+++ b/Vincent/scripts/runAllExample_ClimateChange.ipynb
@@ -9,9 +9,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>\n",
+       "    document.getElementById('toggleButton').onclick = function () {\n",
+       "        if (code_shown) {\n",
+       "            $('div.input').hide('500');\n",
+       "            $('#toggleButton').val('Show Code')\n",
+       "        } else {\n",
+       "            $('div.input').show('500');\n",
+       "            $('#toggleButton').val('Hide Code')\n",
+       "        }\n",
+       "        code_shown = !code_shown\n",
+       "    }\n",
+       "\n",
+       "    document.getElementById('init').onclick = function () {\n",
+       "        runAll = document.getElementById('run_all_cells_below').childNodes[1]\n",
+       "        runAll.click()\n",
+       "    }\n",
+       "\n",
+       "    $(document).ready(function () {\n",
+       "        code_shown = false;\n",
+       "        $('div.input').hide()\n",
+       "    });\n",
+       "</script>\n",
+       "<input type=\"submit\" id=\"toggleButton\" value=\"Show Code\">\n",
+       "<input id=\"init\" type=\"submit\" value=\"Initialize\">"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
     "<script>\n",
@@ -444,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
