Added a dynamic table to show station attributes

--- a/Zach/Wind Turbines/map.ipynb
+++ b/Zach/Wind Turbines/map.ipynb
@@ -383,7 +383,175 @@
       "</html>\n",
       "MISTANUSK CREEK\n",
       "54.59277777777778\n",
-      "240.00916666666666\n"
+      "240.00916666666666\n",
+      "Mouse up\n",
+      "<p>MISTANUSK CREEK</p>\n",
+      "<p>Latitude: 54.592<br>Longitude: 240.00<br>End Date: </p><html>\n",
+      "<body>\n",
+      "<p id=\"show_in_table\" hidden>no</p>\n",
+      "<button type=\"button\" onclick=\"document.getElementById('show_in_table').innerHTML = 'yes'\">Show in table</button>\n",
+      " \n",
+      "</body>\n",
+      "</html>\n",
+      "MISTANUSK CREEK\n",
+      "54.59277777777778\n",
+      "240.00916666666666\n",
+      "Mouse up\n",
+      "<p>FONTAS LO</p>\n",
+      "<p>Latitude: 57.783<br>Longitude: 241.5<br>End Date: </p><html>\n",
+      "<body>\n",
+      "<p id=\"show_in_table\" hidden>no</p>\n",
+      "<button type=\"button\" onclick=\"document.getElementById('show_in_table').innerHTML = 'yes'\">Show in table</button>\n",
+      " \n",
+      "</body>\n",
+      "</html>\n",
+      "FONTAS LO\n",
+      "57.78333333333333\n",
+      "241.5\n",
+      "Mouse up\n",
+      "<p>MOBERLY LO</p>\n",
+      "<p>Latitude: 53.55<br>Longitude: 242.03<br>End Date: </p><html>\n",
+      "<body>\n",
+      "<p id=\"show_in_table\" hidden>no</p>\n",
+      "<button type=\"button\" onclick=\"document.getElementById('show_in_table').innerHTML = 'yes'\">Show in table</button>\n",
+      " \n",
+      "</body>\n",
+      "</html>\n",
+      "MOBERLY LO\n",
+      "53.55\n",
+      "242.03333333333333\n",
+      "Mouse up\n",
+      "<p>WILLOW CREEK 1</p>\n",
+      "<p>Latitude: 53.385<br>Longitude: 242.34<br>End Date: </p><html>\n",
+      "<body>\n",
+      "<p id=\"show_in_table\" hidden>no</p>\n",
+      "<button type=\"button\" onclick=\"document.getElementById('show_in_table').innerHTML = 'yes'\">Show in table</button>\n",
+      " \n",
+      "</body>\n",
+      "</html>\n",
+      "WILLOW CREEK 1\n",
+      "53.385555555555555\n",
+      "242.3475\n",
+      "Mouse up\n",
+      "<p>JASPER</p>\n",
+      "<p>Latitude: 52.883<br>Longitude: 242.06<br>End Date: </p><html>\n",
+      "<body>\n",
+      "<p id=\"show_in_table\" hidden>no</p>\n",
+      "<button type=\"button\" onclick=\"document.getElementById('show_in_table').innerHTML = 'yes'\">Show in table</button>\n",
+      " \n",
+      "</body>\n",
+      "</html>\n",
+      "JASPER\n",
+      "52.88333333333333\n",
+      "242.06666666666666\n",
+      "Mouse up\n",
+      "<p>JASPER WEST GATE</p>\n",
+      "<p>Latitude: 52.866<br>Longitude: 242.38<br>End Date: </p><html>\n",
+      "<body>\n",
+      "<p id=\"show_in_table\" hidden>no</p>\n",
+      "<button type=\"button\" onclick=\"document.getElementById('show_in_table').innerHTML = 'yes'\">Show in table</button>\n",
+      " \n",
+      "</body>\n",
+      "</html>\n",
+      "JASPER WEST GATE\n",
+      "52.86666666666667\n",
+      "242.38333333333333\n",
+      "Mouse up\n",
+      "<p>JASPER WEST GATE</p>\n",
+      "<p>Latitude: 52.866<br>Longitude: 242.38<br>End Date: </p><html>\n",
+      "<body>\n",
+      "<p id=\"show_in_table\" hidden>no</p>\n",
+      "<button type=\"button\" onclick=\"document.getElementById('show_in_table').innerHTML = 'yes'\">Show in table</button>\n",
+      " \n",
+      "</body>\n",
+      "</html>\n",
+      "JASPER WEST GATE\n",
+      "52.86666666666667\n",
+      "242.38333333333333\n",
+      "Mouse up\n",
+      "<p>JASPER WARDEN</p>\n",
+      "<p>Latitude: 52.926<br>Longitude: 242.02<br>End Date: </p><html>\n",
+      "<body>\n",
+      "<p id=\"show_in_table\" hidden>no</p>\n",
+      "<button type=\"button\" onclick=\"document.getElementById('show_in_table').innerHTML = 'yes'\">Show in table</button>\n",
+      " \n",
+      "</body>\n",
+      "</html>\n",
+      "JASPER WARDEN\n",
+      "52.92638888888889\n",
+      "242.02972222222223\n",
+      "Mouse up\n",
+      "<p>COALSPUR</p>\n",
+      "<p>Latitude: 53.183<br>Longitude: 243.0<br>End Date: </p><html>\n",
+      "<body>\n",
+      "<p id=\"show_in_table\" hidden>no</p>\n",
+      "<button type=\"button\" onclick=\"document.getElementById('show_in_table').innerHTML = 'yes'\">Show in table</button>\n",
+      " \n",
+      "</body>\n",
+      "</html>\n",
+      "COALSPUR\n",
+      "53.18333333333333\n",
+      "243.0\n",
+      "Mouse up\n",
+      "<p>COALSPUR</p>\n",
+      "<p>Latitude: 53.183<br>Longitude: 243.0<br>End Date: </p><html>\n",
+      "<body>\n",
+      "<p id=\"show_in_table\" hidden>no</p>\n",
+      "<button type=\"button\" onclick=\"document.getElementById('show_in_table').innerHTML = 'yes'\">Show in table</button>\n",
+      " \n",
+      "</body>\n",
+      "</html>\n",
+      "COALSPUR\n",
+      "53.18333333333333\n",
+      "243.0\n",
+      "Mouse up\n",
+      "<p>COALSPUR</p>\n",
+      "<p>Latitude: 53.183<br>Longitude: 243.0<br>End Date: </p><html>\n",
+      "<body>\n",
+      "<p id=\"show_in_table\" hidden>no</p>\n",
+      "<button type=\"button\" onclick=\"document.getElementById('show_in_table').innerHTML = 'yes'\">Show in table</button>\n",
+      " \n",
+      "</body>\n",
+      "</html>\n",
+      "COALSPUR\n",
+      "53.18333333333333\n",
+      "243.0\n",
+      "Mouse up\n",
+      "<p>YELLOWHEAD LO</p>\n",
+      "<p>Latitude: 53.233<br>Longitude: 243.15<br>End Date: </p><html>\n",
+      "<body>\n",
+      "<p id=\"show_in_table\" hidden>no</p>\n",
+      "<button type=\"button\" onclick=\"document.getElementById('show_in_table').innerHTML = 'yes'\">Show in table</button>\n",
+      " \n",
+      "</body>\n",
+      "</html>\n",
+      "YELLOWHEAD LO\n",
+      "53.233333333333334\n",
+      "243.15\n",
+      "Mouse up\n",
+      "<p>YELLOWHEAD LO</p>\n",
+      "<p>Latitude: 53.233<br>Longitude: 243.15<br>End Date: </p><html>\n",
+      "<body>\n",
+      "<p id=\"show_in_table\" hidden>no</p>\n",
+      "<button type=\"button\" onclick=\"document.getElementById('show_in_table').innerHTML = 'yes'\">Show in table</button>\n",
+      " \n",
+      "</body>\n",
+      "</html>\n",
+      "YELLOWHEAD LO\n",
+      "53.233333333333334\n",
+      "243.15\n",
+      "Mouse up\n",
+      "<p>YELLOWHEAD LO</p>\n",
+      "<p>Latitude: 53.233<br>Longitude: 243.15<br>End Date: </p><html>\n",
+      "<body>\n",
+      "<p id=\"show_in_table\" hidden>no</p>\n",
+      "<button type=\"button\" onclick=\"document.getElementById('show_in_table').innerHTML = 'yes'\">Show in table</button>\n",
+      " \n",
+      "</body>\n",
+      "</html>\n",
+      "YELLOWHEAD LO\n",
+      "53.233333333333334\n",
+      "243.15\n"
      ]
     }
    ],
