Table updates working (with bugs)

--- a/Zach/Wind Turbines/map.ipynb
+++ b/Zach/Wind Turbines/map.ipynb
@@ -33,7 +33,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1482/1482 [00:13<00:00, 109.40it/s]\n"
+      "100%|██████████| 1482/1482 [00:15<00:00, 96.31it/s]\n"
      ]
     }
    ],
@@ -48,6 +48,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def update_table(m):\n",
+    "    try:\n",
+    "        m.update_table(GLOBAL_SHOW_STATION)\n",
+    "    except:\n",
+    "        pass\n",
+    "\n",
     "# Define the callback function that will be used\n",
     "current_time = lambda: int(round(time.time() * 1000))\n",
     "last_time = current_time()\n",
@@ -65,7 +71,8 @@
     "            last_time = current_time()\n",
     "            \n",
     "    elif type == 'mouseup':\n",
-    "        alberta.update_table(coordinates)\n",
+    "        time.sleep(0.1)\n",
+    "        update_table(alberta)#coordinates)\n",
     "        \n",
     "alberta.map.on_interaction(update_info)"
    ]
@@ -78,7 +85,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00da00cea6894f5f912cc4fa77e8604d",
+       "model_id": "896c51c6e6ac435f885bae8ee12afe56",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,12 +119,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61e1495e3afa43c48c52f1385e8e637b",
+       "model_id": "e2014f06f92348cab034bdd6a69dead8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -142,11 +151,26 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name 'GLOBAL_SHOW_STATION' is not defined\n",
+      "name 'GLOBAL_SHOW_STATION' is not defined\n"
+     ]
     }
    ],
    "source": [
     "alberta.map"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
