--- a/Zach/Wind Turbines/testing.ipynb
+++ b/Zach/Wind Turbines/testing.ipynb
@@ -517,13 +517,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa7a5aca4ee54442a08d6236e459421f",
+       "model_id": "4d2bb06eb78e4b6dbc251ebc94743782",
        "version_major": 2,
        "version_minor": 0
       },
@@ -551,7 +551,8 @@
     }
    ],
    "source": [
-    "from ipywidgets import HTML \n",
+    "#from ipywidgets import HTML \n",
+    "from ipywidgets import HTML\n",
     "\n",
     "HTML_BUTTON='''<html>\n",
     "<body>\n",
@@ -559,9 +560,47 @@
     "<button type=\"button\" onclick=\"document.getElementById('show_in_table').innerHTML = 'yes'\">Show in table</button>\n",
     "</body>\n",
     "</html>''' \n",
-    "html = HTML(HTML_BUTTON)\n",
-    "html.hold_sync()\n",
+    "def func(change):\n",
+    "    print(change['type'])\n",
+    "def p():\n",
+    "    print(\"Call\")\n",
+    "    \n",
+    "html = HTML(HTML_BUTTON, continuous_update=True)\n",
+    "#html.hold_sync()\n",
+    "#html.observe(func)\n",
     "html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "html.value = \"hello\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Context manager for bundling trait change notifications and cross\n",
+      "        validation.\n",
+      "\n",
+      "        Use this when doing multiple trait assignments (init, config), to avoid\n",
+      "        race conditions in trait notifiers requesting other trait values.\n",
+      "        All trait notifications will fire after all values have been assigned.\n",
+      "        \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(html.hold_trait_notifications.__doc__)\n"
    ]
   },
   {
@@ -634,6 +673,123 @@
     "d ={'name': 'All'} \n",
     "print(html.notify_change(d))\n",
     "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipywidgets import HTML\n",
+    "\n",
+    "#from IPython.display import HTML\n",
+    "def stuff():\n",
+    "    input_form = \"\"\"\n",
+    "<div style=\"background-color:gainsboro; border:solid black; width:300px; padding:20px;\">\n",
+    "Variable Name: <input type=\"text\" id=\"var_name\" value=\"foo\"><br>\n",
+    "Variable Value: <input type=\"text\" id=\"var_value\" value=\"bar\"><br>\n",
+    "<button onclick=\"set_value()\">Set Value</button>\n",
+    "</div>\n",
+    "\"\"\"\n",
+    "\n",
+    "    javascript = \"\"\"\n",
+    "<script type=\"text/Javascript\">\n",
+    "    function set_value(){\n",
+    "        var var_name = document.getElementById('var_name').value;\n",
+    "        var var_value = document.getElementById('var_value').value;\n",
+    "        var command = var_name + \" = '\" + var_value + \"'\";\n",
+    "        console.log(\"Executing Command: \" + command);\n",
+    "\n",
+    "        var kernel = IPython.notebook.kernel;\n",
+    "        kernel.execute(command);\n",
+    "    }\n",
+    "</script>\n",
+    "\"\"\"\n",
+    "\n",
+    "    display(HTML(input_form + javascript))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9337cc3231cf4dddb25e925925286788",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>HTML</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "HTML(value='\\n<div style=\"background-color:gainsboro; border:solid black; width:300px; padding:20px;\">\\nVariable Name: <input type=\"text\" id=\"var_name\" value=\"foo\"><br>\\nVariable Value: <input type=\"text\" id=\"var_value\" value=\"bar\"><br>\\n<button onclick=\"set_value()\">Set Value</button>\\n</div>\\n\\n<script type=\"text/Javascript\">\\n    function set_value(){\\n        var var_name = document.getElementById(\\'var_name\\').value;\\n        var var_value = document.getElementById(\\'var_value\\').value;\\n        var command = var_name + \" = \\'\" + var_value + \"\\'\";\\n        console.log(\"Executing Command: \" + command);\\n\\n        var kernel = IPython.notebook.kernel;\\n        kernel.execute(command);\\n    }\\n</script>\\n')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "stuff()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "man\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(foo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-82-61806dc08c16>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-82-61806dc08c16>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    function(comm, msg) {\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "var kernel = IPython.notebook.kernel;\n",
+    "kernel.execute(command);"
    ]
   },
   {
